WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159365
REGRESSION (
r202641
): Netflix playback stalls after a few seconds
https://bugs.webkit.org/show_bug.cgi?id=159365
Summary
REGRESSION (r202641): Netflix playback stalls after a few seconds
Jer Noble
Reported
2016-07-01 13:21:59 PDT
REGRESSION (
r202641
): Netflix playback stalls after a few seconds
Attachments
Patch
(11.18 KB, patch)
2016-07-01 15:21 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(901.47 KB, application/zip)
2016-07-01 16:16 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(776.82 KB, application/zip)
2016-07-01 16:25 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(1.77 MB, application/zip)
2016-07-01 16:29 PDT
,
Build Bot
no flags
Details
Patch
(9.50 KB, patch)
2016-07-01 17:48 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.90 KB, patch)
2016-07-05 12:47 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-07-01 15:21:34 PDT
Created
attachment 282591
[details]
Patch
Build Bot
Comment 2
2016-07-01 16:16:40 PDT
Comment on
attachment 282591
[details]
Patch
Attachment 282591
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1609442
New failing tests: http/tests/media/media-source/mediasource-play.html http/tests/media/media-source/mediasource-remove.html media/media-source/media-source-remove.html
Build Bot
Comment 3
2016-07-01 16:16:42 PDT
Created
attachment 282602
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Eric Carlson
Comment 4
2016-07-01 16:25:17 PDT
Comment on
attachment 282591
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282591&action=review
> Source/WebCore/Modules/mediasource/SourceBuffer.cpp:666 > + PlatformTimeRanges erasedRanges;
The elf bot's WTFMove macro doesn't like you returning this.
> Source/WebCore/Modules/mediasource/SourceBuffer.cpp:1617 > + // disjoint ranges separated by less than a "fudge factor"
Nit: no period at the end of the sentence.
Build Bot
Comment 5
2016-07-01 16:25:46 PDT
Comment on
attachment 282591
[details]
Patch
Attachment 282591
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1609474
New failing tests: http/tests/media/media-source/mediasource-play.html http/tests/media/media-source/mediasource-remove.html media/media-source/media-source-remove.html
Build Bot
Comment 6
2016-07-01 16:25:49 PDT
Created
attachment 282605
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-07-01 16:29:39 PDT
Comment on
attachment 282591
[details]
Patch
Attachment 282591
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1609473
New failing tests: http/tests/media/media-source/mediasource-play.html http/tests/media/media-source/mediasource-remove.html media/media-source/media-source-remove.html
Build Bot
Comment 8
2016-07-01 16:29:42 PDT
Created
attachment 282606
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 9
2016-07-01 17:48:44 PDT
Created
attachment 282619
[details]
Patch
Jer Noble
Comment 10
2016-07-05 12:47:22 PDT
Created
attachment 282807
[details]
Patch
Eric Carlson
Comment 11
2016-07-05 13:19:56 PDT
Comment on
attachment 282807
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282807&action=review
> Source/WebCore/Modules/mediasource/SourceBuffer.cpp:1617 > + // Eliminate small gaps between buffered ranges by coalescing > + // disjoint ranges separated by less than a "fudge factor"
Nit: this sentence needs a period.
Jer Noble
Comment 12
2016-07-05 13:23:37 PDT
Committed
r202829
: <
http://trac.webkit.org/changeset/202829
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug