REGRESSION (r202641): Netflix playback stalls after a few seconds https://bugs.webkit.org/show_bug.cgi?id=159365

Reviewed by Eric Carlson.

Source/WebCore:

Test: LayoutTests/media/media-source/media-source-small-gap.html

In r202641, we removed a "fudge factor" of 1 millisecond added onto the duration
of every sample for the purposes of calculating a SourceBuffer's buffered ranges.
Netflix (and likely other providers) have streams that have 1 "timeScale" gaps
between segments (e.g., 1/9000s, 1/3003s, etc.). Fill those gaps by looking for
the previous and next samples and extending the buffered range to cover the gaps
if they're short enough. We have to ensure that we correctly remove those extended
durations when we remove samples from the SourceBuffer as well.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::removeSamplesFromTrackBuffer):
(WebCore::SourceBuffer::removeCodedFrames):
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample):

Source/WTF:

Add a isBetween() convenience method.

* wtf/MediaTime.cpp:
(WTF::MediaTime::isBetween):
* wtf/MediaTime.h:

LayoutTests:

* media/media-source/media-source-small-gap-expected.txt: Added.
* media/media-source/media-source-small-gap.html: Added.

Canonical link: https://commits.webkit.org/177560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202829 268f45cc-cd09-0410-ab3c-d52691b4dbfc